<resources>
    <string name="app_name">AmazonECommerceApp</string>
    <string name="privacy_notice_text"><a href="#">Conditions of Use Privacy Notice</a></string>
    <string name="copyright_text">© 1996-2024, Amazon.com, Inc. or its affiliates</string>
    <string name="amazon_logo">Amazon Logo</string>
    <string name="login_info_text">Sign in to <b>Zappos.com</b> using your Amazon account</string>
    <string name="forgot_password"><a href="#">Forgot Password?</a></string>
    <string name="sign_in">Sign in</string>
    <string name="edit_username_text">Email (phone for mobile accounts)</string>
    <string name="password_text">Amazon password</string>
    <string name="show_password_text">Show password</string>
    <string name="keep_me_signed_in">Keep me signed in.</string>
    <string name="details"><a href="#">Details</a></string>
    <string name="new_to_amazon">New to Amazon?</string>
    <string name="create_new_account">Create a new Amazon account</string>
    <string name="create_account">Create Account</string>
    <string name="your_name">Your name</string>
    <string name="continue_text">Continue</string>
    <string name="mobile_number_or_email">Mobile Number or Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="shop_by_categories">Shop By Categories</string>
    <string name="user_exists_error">Error: User \'%1$s\' already exists.</string>
    <string name="email_number_exists_error">Error: Email or Number \'%1$s\' already in use.</string>
    <string name="field_required_error">Error: Field: \'%1$s\' is required.</string>
    <string name="password_mismatch_error">Error: Mismatch Passwords.</string>
    <string name="invalid_user_password">Error: Invalid user or password.</string>
    <string name="added_user_successfully">User: \'%1$s\' Added Successfully.</string>
    <string name="user_signin_successfully">User: \'%1$s\' Signed In Successfully.</string>
    <string name="welcome_text">Welcome %1$s!</string>
    <string name="category_selected">Category: \'%1$s\' Selected</string>
    <string name="shopping_category_image">Shopping Category Image</string>
</resources>