<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/amazonLogo"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/amazon_logo" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amazonLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_border"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/createAccountLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/create_account"
                android:textAlignment="center"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fullNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/your_name" />

            <EditText
                android:id="@+id/editNameText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/mobileEmailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/mobile_number_or_email" />

            <EditText
                android:id="@+id/editMobileEmailText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/editPasswordText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/reEnterPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/re_enter_password" />

            <EditText
                android:id="@+id/editReEnterPasswordText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/continueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/primary_button_background"
                android:onClick="continueButtonOnClick"
                android:text="@string/continue_text"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>