<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="140dp"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/amazon_logo" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="145dp"
        android:layout_below="@id/imageView" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp" >

            <TextView
                android:id="@+id/signInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/sign_in"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/form_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/signInText"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_border"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editUsername"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_below="@id/signInText"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/edit_username_text"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@color/border_color"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/showPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/form_layout"
                android:layout_alignParentStart="true"
                android:text="@string/show_password_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/showPassword"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/primary_button_background"
                android:onClick="signInButtonOnClick"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/signInButton"
                android:layout_centerHorizontal="true"
                android:background="@drawable/text_border" />

            <TextView
                android:id="@+id/newToAmazonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signInButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10.5dp"
                android:text="@string/new_to_amazon"
                android:textAlignment="center"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newToAmazonText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/secondary_button_background"
                android:onClick="createAccountOnClick"
                android:text="@string/create_new_account"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>